Ingress/prom-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promet
  labels:
    app: prom
spec:
  selector:
    matchLabels:
      app: prom
  template:
    metadata:
      labels:
        app: prom
    spec:
      containers:
      - name: prom
        image: bitnami/prometheus:latest
        ports:
        - containerPort: 9090
