Ingress/ngi-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: pots-service
  labels:
    name: clust-in
spec:
  type: ClusterIP
  selector:
    app: kekw
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
